[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-isolate"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "gilfree", email = "gilfree@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["dill","tblib","pytest"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/gilfree/pytest-isolate#readme"
Issues = "https://github.com/gilfree/pytest-isolate/issues"
Source = "https://github.com/gilfree/pytest-isolate"

[project.entry-points.pytest11]
pytest_isolate = "pytest_isolate.plugin"

[tool.hatch.version]
path = "src/pytest_isolate/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F","I"]
ignore = []
fix=true
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10